feat: annotation as normal layer

--- a/src/app/@ansyn/assets/styles/icons.less
+++ b/src/app/@ansyn/assets/styles/icons.less
@@ -278,7 +278,7 @@
 	content: "\e914";
 }
 .icon-download-layer:before {
-	content: "\e918";
+	content: "\e90e";
 }
 .icon-map-Polygon:before {
 	content: "\e90f";
