--- a/src/app/@ansyn/menu-items/layers-manager/components/layers-collection/layer-collection.component.less
+++ b/src/app/@ansyn/menu-items/layers-manager/components/layers-collection/layer-collection.component.less
@@ -138,3 +138,14 @@ div.container {
 		 }
 	 }
 }
+
+button.download-layer {
+	position: relative;
+	bottom: 4px;
+	background: transparent;
+	border: none;
+	.icon-download-layer {
+		color: white;
+		font-size: 20px;
+	}
+}
