--- a/src/app/@ansyn/menu-items/layers-manager/components/layers-collection/layer-collection.component.html
+++ b/src/app/@ansyn/menu-items/layers-manager/components/layers-collection/layer-collection.component.html
@@ -1,13 +1,13 @@
 <div class="container">
 
 	<div class="title-row">
-		<span class="title">{{ collection[0].type }} Layers</span>
-		<button [@rotateArrow]="show" #downArrow class="down-arrow"
+		<span class="title">{{ collection.name }} Layers</span>
+		<button *ngIf="!collection.hideArrow" [@rotateArrow]="show" #downArrow class="down-arrow"
 				(click)="show = !show">
 		</button>
 	</div>
 
-	<div class="layers" *ngFor="let layer of collection" [@layersTrigger]="show">
+	<div class="layers" *ngFor="let layer of collection.data" [@layersTrigger]="show">
 		<div class="left-side">
 			<div class="checkbox">
 				<ansyn-checkbox
@@ -21,9 +21,13 @@
 				<div class="field-name-container">
 					<span class="field-name" [title]="layer.name">{{layer.name}}</span>
 				</div>
-				<span class="only-filter"
-					  (click)="selectOnly(layer.id)">only</span>
+				<span class="only-filter" (click)="selectOnly(layer.id)" [hidden]="collection.data.length < 2">only</span>
 			</div>
+			<button *ngIf="collection.onDownload"
+					class="download-layer"
+					(click)="collection.onDownload()">
+				<i class="icon icon-download-layer"></i>
+			</button>
 		</div>
 	</div>
 
