--- a/src/app/@ansyn/assets/styles/styles.less
+++ b/src/app/@ansyn/assets/styles/styles.less
@@ -1,6 +1,6 @@
 @import "~ol/ol.css";
 @import "~flatpickr/dist/flatpickr.css";
-@import "~new-ansyn-event-drops/style.css";
+@import "~@ansyn/event-drops/style.css";
 @import "core/less/z-index-globals";
 @import "bootstrap/carousel";
 @import 'icons';
