Setting width and min-width in CSS

--- a/src/app/@ansyn/status-bar/components/combo-box/combo-box.component.less
+++ b/src/app/@ansyn/status-bar/components/combo-box/combo-box.component.less
@@ -17,7 +17,8 @@
 		.options-container {
 			border: 1px solid;
 			border-bottom: none;
-			width: 100%;
+			width: auto;
+			min-width: 100%;
 			background: black;
 
 			&.show {
