fix: tmpl annotation flag

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -70,8 +70,7 @@
             "type": "FeatureCollection",
             "features": []
           },
-          "displayAnnotationsLayer": true,
-          "activeLayersIds": []
+          "activeLayersIds": ["Annotation"]
         },
         "favoriteOverlays": [],
         "region": {
