Help panel, more UI improvements (#1604)
* 1 More space for footer
2 Dividing the slide into "header" and "content" divs

* 1 Fixing some texts
2 Fixing the position of the images (so, not flex children)

* Remove commented code

* Styling tweaks, responsive, using css vars

* Styling tweaks

* Finished making all heights relative to the total slide height. Now the design is fluid, and scale correctly when you change the window height.

* Adding a stronger emphasis to next/prev buttons, on hover

--- a/src/app/@ansyn/menu-items/help/components/help.component.html
+++ b/src/app/@ansyn/menu-items/help/components/help.component.html
@@ -1,23 +1,20 @@
 <carousel [interval]="0">
 	<slide *ngFor="let slide of const.SLIDES_DATA">
 		<div class="help-slide">
-			<div class="above-center">
-				<div>How to start exploring?</div>
-				<div>{{slide.text[0]}}</div>
-				<div>{{slide.text[1]}}</div>
-				<img [src]="img(slide.image[0])">
-			</div>
-			<div class="from-center">
-				<div>{{slide.text[2]}}</div>
-				<img [src]="img(slide.image[1])">
-				<div>{{slide.text[3]}}</div>
-			</div>
+			<div class="header1">How to start exploring?</div>
+			<div class="header2">{{slide.text[0]}}</div>
+			<div class="fixed-height-text topText">{{slide.text[1]}}</div>
+			<div class="img-container"><img [src]="img(slide.image[0])"></div>
+			<div class="fixed-height-text midText">{{slide.text[2]}}</div>
+			<div class="img-container"><img [src]="img(slide.image[1])"></div>
+			<div class="bottomText">{{slide.text[3]}}</div>
 		</div>
 	</slide>
 </carousel>
 
+<hr/>
+
 <footer>
-	<hr/>
 	<label>
 		<ansyn-checkbox
 			text="Don't show on startup"
