--- a/src/app/@ansyn/menu-items/help/components/help.component.less
+++ b/src/app/@ansyn/menu-items/help/components/help.component.less
@@ -1,80 +1,84 @@
 @import "core/less/common";
 
-@ansyn-help-footer-height: 40px;
-@ansyn-help-elements-width-normal: 320px;
-@ansyn-help-elements-width-small: 160px;
+@ansyn-help-footer-height: 58px;
+@ansyn-help-slide-height: calc(~"100vh - @{ansyn-help-footer-height}");
+@ansyn-help-slide-padding-top: calc(~"@{ansyn-help-slide-height} * 0.022");
+@ansyn-help-image-original-width-px: 320px;
+@ansyn-help-image-original-width-vh: calc(~"@{ansyn-help-slide-height} * 0.36");
+@ansyn-help-header-vertical-margin: calc(~"@{ansyn-help-slide-height} * 0.044");
+@ansyn-help-font-size-default: calc(~"@{ansyn-help-slide-height} * 0.016");
+@ansyn-help-font-size-head1: calc(~"@{ansyn-help-slide-height} * 0.019");
+@ansyn-help-font-size-head2: calc(~"@{ansyn-help-slide-height} * 0.025");
 
 :host {
 	&:extend(.default-menu-item);
 	color: white;
-	font-size: 14px;
+	font-size: @ansyn-help-font-size-default;
+	display: flex;
+	flex-direction: column;
 }
 
 .help-slide {
 	box-sizing: border-box;
-	height: calc(~"100vh - @{ansyn-help-footer-height}");
-	padding: 20px 10px 0 10px;
+	height: @ansyn-help-slide-height;
+	padding: @ansyn-help-slide-padding-top 1vh 0 1vh;
 	display: flex;
 	justify-content: stretch;
 	flex-direction: column;
 	align-items: center;
 
-	.above-center {
-		height: 46%;
-		margin-bottom: 4%;
-		display: flex;
-		flex-direction: column;
-		justify-content: space-between;
-		align-items: start;
-
-		& > * {
-			width: @ansyn-help-elements-width-normal;
-		}
-
-		@media screen and (max-height: 850px) {
-			& > * {
-				width: @ansyn-help-elements-width-small;
-			}
-		}
-
-		& > div:nth-child(1) {
-			font-size: 16px;
-		}
-
-		& > div:nth-child(2) {
-			font-size: 22px;
-		}
+	& > * {
+		width: @ansyn-help-image-original-width-px;
 	}
 
-	.from-center {
-		height: 43%;
+	.header1 {
+		font-size: @ansyn-help-font-size-head1;
+	}
+
+	.header2 {
+		font-size: @ansyn-help-font-size-head2;
+		margin: @ansyn-help-header-vertical-margin 0;
+	}
+
+	img {
+		width: @ansyn-help-image-original-width-vh;
+	}
+	.img-container {
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		align-items: start;
+	}
+	.fixed-height-text {
 		display: flex;
 		flex-direction: column;
-		justify-content: space-between;
-		align-items: start;
-
-		& > * {
-			width: @ansyn-help-elements-width-normal;
+		&.topText {
+			height: 2em;
+			justify-content: flex-start;
 		}
-
-		@media screen and (max-height: 850px) {
-			& > * {
-				width: @ansyn-help-elements-width-small;
-			}
+		&.midText {
+			height: 3em;
+			justify-content: center;
 		}
-
 	}
+	.bottomText {
+		margin-top: 1em;
+	}
+}
+
+hr {
+	width: 80%;
+	text-align: center;
+	border-color: fade(#ffffff, 50);
 }
 
 footer {
 	box-sizing: border-box;
-	padding: 0 10px;
-
-	hr {
-		width: 80%;
-		text-align: center;
-		border-color: fade(#ffffff, 50);
-	}
+	padding: 0 10%;
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 
 	input {
 		transform: translateY(3px)
@@ -91,15 +95,29 @@ footer {
 }
 
 // Replace the next/prev controls
-/deep/ .carousel-control-next-icon {
-	background-image: url(/assets/icons/help/help_next.svg);
+
+/deep/ .carousel-control-prev {
+	opacity: 0.8;
+	.carousel-control-prev-icon {
+		background-image: url(/assets/icons/help/help_prev.svg);
+	}
+	&:hover, &:focus {
+		opacity: 1;
+		.carousel-control-prev-icon {
+			background-image: url(/assets/icons/help/help_prev_bold.svg);
+		}
+	}
 }
-/deep/ .carousel-control-prev-icon {
-	background-image: url(/assets/icons/help/help_prev.svg);
-}
-/deep/ .carousel-control-prev,
+
 /deep/ .carousel-control-next {
 	opacity: 0.8;
+	.carousel-control-next-icon {
+		background-image: url(/assets/icons/help/help_next.svg);
+	}
 	&:hover, &:focus {
-		opacity: 1.0;
-	}}
+		opacity: 1;
+		.carousel-control-next-icon {
+			background-image: url(/assets/icons/help/help_next_bold.svg);
+		}
+	}
+}
