--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -510,7 +510,7 @@
     "PLANET": {
       "whitelist": [
         {
-          "name": "Entire Earth",
+          "name": "USA",
           "dates": [
             {
               "start": null,
@@ -518,32 +518,7 @@
             }
           ],
           "sensorNames": "[ \"Landsat8L1G\", \"Sentinel2L1C\" ]",
-          "coverage": [
-            [
-              [
-                [
-                  -180,
-                  -90
-                ],
-                [
-                  -180,
-                  90
-                ],
-                [
-                  180,
-                  90
-                ],
-                [
-                  180,
-                  -90
-                ],
-                [
-                  -180,
-                  -90
-                ]
-              ]
-            ]
-          ]
+		  "coverage": [[[[-126.73828125000001,48.195387408333374],[-51.32812500000002,47.9605023889151],[-80.24414062500001,24.166802085303246],[-125.94726562500003,30.41078179084589],[-126.73828125000001,48.195387408333374]]]]
         },
         {
           "name": "California",
