1 Enhanced styling for fill/stroke 2 Adding an enum for simplicity, readability and preventing Webstorm errors in HTML

--- a/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.less
+++ b/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.less
@@ -122,10 +122,13 @@
 						label {
 							width: 100%;
 							height: 100%;
-							display: block;
+							display: flex;
+							justify-content: space-between;
+							align-items: center;
+							box-sizing: border-box;
+							padding: 4px 7px 4px 12px;
 							cursor: pointer;
 							font-size: 14px;
-							padding: 4px;
 						}
 						span.color {
 							display: inline-block;
