--- a/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.html
+++ b/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.html
@@ -15,12 +15,12 @@
 
 	<li class="expanded-selection line-width-selection">
 
-		<button (click)="toggleSelection(SelectionBoxes.lineWidth)"
-				[class.expand]="selectedBox === SelectionBoxes.lineWidth">
+		<button (click)="toggleSelection(SelectionBoxTypes.LineWidth)"
+				[class.expand]="selectedBox === SelectionBoxTypes.LineWidth">
 			<span class="icon-annotation-weight" tooltip-value="Width" tooltip-class="bottom"></span>
 		</button>
 
-		<div class="list line-width-expand" *ngIf="selectedBox === SelectionBoxes.lineWidth">
+		<div class="list line-width-expand" *ngIf="selectedBox === SelectionBoxTypes.LineWidth">
 			<div
 				class="item"
 				*ngFor="let width of lineWidthList"
@@ -35,12 +35,12 @@
 
 	<li class="expanded-selection color-selection">
 
-		<button (click)="toggleSelection(SelectionBoxes.colorPicker)"
-				[class.expand]="selectedBox === SelectionBoxes.colorPicker">
+		<button (click)="toggleSelection(SelectionBoxTypes.ColorPicker)"
+				[class.expand]="selectedBox === SelectionBoxTypes.ColorPicker">
 			<span class="icon-annotation-color" tooltip-value="Color" tooltip-class="bottom"></span>
 		</button>
 
-		<div class="list color-selection-expand" *ngIf="selectedBox === SelectionBoxes.colorPicker">
+		<div class="list color-selection-expand" *ngIf="selectedBox === SelectionBoxTypes.ColorPicker">
 
 			<div class="item color-picker-item">
 				<label for="color-fill-picker">
@@ -54,7 +54,7 @@
 					(change)="changeFillColor($event.target.value)" title="fill"/>
 			</div>
 
-			<div class="color-picker-item">
+			<div class="item color-picker-item">
 				<label for="color-stroke-picker">
 					<span class="text">Stroke</span>
 					<span class="color" [style.background]="annotationProperties.strokeColor"></span>
