fix: CR request changes

--- a/src/app/@ansyn/core/components/ansyn-modal/ansyn-modal.component.html
+++ b/src/app/@ansyn/core/components/ansyn-modal/ansyn-modal.component.html
@@ -1,4 +1,4 @@
-<div class="blackscreen" (click)="this.showChange.emit(false)">
+<div class="blackscreen" (click)="close()">
 	<div class="content" (click)="$event.stopPropagation()">
 		<ng-content></ng-content>
 	</div>
