--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -517,7 +517,7 @@
               "end": null
             }
           ],
-          "sensorNames": {{ if exists "/ansyn/overlay/planet/sensor/names" }}{{ getv "/ansyn/overlay/planet/sensor/names" }}{{ else }}"[ \"Landsat8L1G\", \"Sentinel2L1C\" ]"{{ end }},
+          "sensorNames": "{{ if exists "/ansyn/overlay/planet/sensor/names" }}{{ getv "/ansyn/overlay/planet/sensor/names" }}{{ else }}[ \"Landsat8L1G\", \"Sentinel2L1C\" ]{{ end }}",
 		  "coverage": [[[[-126.73828125000001,48.195387408333374],[-51.32812500000002,47.9605023889151],[-80.24414062500001,24.166802085303246],[-125.94726562500003,30.41078179084589],[-126.73828125000001,48.195387408333374]]]]
         },
         {
