fix: annotations layers to entites

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -66,11 +66,7 @@
           "activeMapId": "defaultImagery1"
         },
         "layers": {
-          "annotationsLayer": {
-            "type": "FeatureCollection",
-            "features": []
-          },
-          "activeLayersIds": ["Annotation"]
+          "activeLayersIds": []
         },
         "favoriteOverlays": [],
         "region": {
