--- a/src/app/@ansyn/menu-items/layers-manager/components/layer/layer.component.html
+++ b/src/app/@ansyn/menu-items/layers-manager/components/layer/layer.component.html
@@ -4,15 +4,15 @@
 		<div class="checkbox">
 			<ansyn-checkbox
 				class="regular-checkbox"
-				[id]="'checkbox' + layer.id"
+				[id]="'checkbox' + layer?.id"
 				(change)="onCheckboxClicked()"
-				[checked]="selectedLayersIds.includes(layer.id)">
+				[checked]="selectedLayersIds.includes(layer?.id)">
 			</ansyn-checkbox>
 		</div>
 
 		<div class="layer-row">
 			<div class="field-name-container">
-				<span class="field-name" [title]="layer.name">{{layer.name}}</span>
+				<span class="field-name" [title]="layer?.name">{{layer?.name}}</span>
 			</div>
 			<span class="only-filter" (click)="selectOnly()" >only</span>
 		</div>
