--- a/src/app/@ansyn/menu-items/layers-manager/components/layer/layer.component.html
+++ b/src/app/@ansyn/menu-items/layers-manager/components/layer/layer.component.html
@@ -5,7 +5,7 @@
 			<ansyn-checkbox
 				class="regular-checkbox"
 				[id]="'checkbox' + layer?.id"
-				(change)="onCheckboxClicked($event)"
+				(change)="onCheckboxClicked($event.target.checked)"
 				[checked]="selectedLayersIds.includes(layer?.id)">
 			</ansyn-checkbox>
 		</div>
