--- a/src/app/@ansyn/status-bar/components/status-bar/status-bar.component.html
+++ b/src/app/@ansyn/status-bar/components/status-bar/status-bar.component.html
@@ -7,7 +7,12 @@
 
 <div class="status-bar" [class.separated-state]="!hideOverlay">
 	<div class="selected-case">
-		<ansyn-selected-case-bar [selectedCaseName]="selectedCaseName"></ansyn-selected-case-bar>
+		<ansyn-hover-click [text]="selectedCaseName" [icon]="icon">>
+			<button class="share-link" (click)="copyLink()">
+				<i class="icon-status-bar-share-link"></i>
+				<span>Share link</span>
+			</button>
+		</ansyn-hover-click>
 	</div>
 	<div class="status">
 		<ansyn-combo-boxes></ansyn-combo-boxes>
