--- a/src/app/@ansyn/menu-items/layers-manager/components/layers-manager/layers-manager.component.html
+++ b/src/app/@ansyn/menu-items/layers-manager/components/layers-manager/layers-manager.component.html
@@ -4,6 +4,4 @@
 	</ng-container>
 </div>
 
-<ansyn-modal [(show)]="showModal">
-	<ansyn-download-layers (onFinish)="showModal = false"></ansyn-download-layers>
-</ansyn-modal>
+<ansyn-data-layers-modals></ansyn-data-layers-modals>
