--- a/src/app/@ansyn/assets/styles/icons.less
+++ b/src/app/@ansyn/assets/styles/icons.less
@@ -284,3 +284,9 @@
 	content: "\e90f";
 	font-size: 4rem;
 }
+.icon-layer-export:before {
+	content: "\e919";
+}
+.icon-layer-add:before {
+	content: "\e91a";
+}
