--- a/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.less
+++ b/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.less
@@ -7,7 +7,6 @@
 
 :host {
 	width: 0;
-	height: @tools-box-height;
 	position: absolute;
 	top: -6px;
 	right: 0;
@@ -16,10 +15,16 @@
 	transition-property: width, visibility;
 	transition-duration: 0.1s;
 	z-index: @z-index-annotations-control;
-
+	.selected-layer{
+		visibility: hidden;
+		display: flex;
+		justify-content: center;
+	}
 	&.expand {
+		.selected-layer{
+			visibility: visible;
+		}
 		width: @tools-box-width;
-		height: @tools-box-height;
 		transition-delay: 0.1s;
 		ul.annotations-options {
 			visibility: visible;
