--- a/src/app/@ansyn/menu-items/layers-manager/components/data-layers-modals/delete-layer/delete-layer.component.html
+++ b/src/app/@ansyn/menu-items/layers-manager/components/data-layers-modals/delete-layer/delete-layer.component.html
@@ -1,7 +1,7 @@
 
 <div class="edit-layer" >
 	<form class="edit-layer-form" (ngSubmit)="removeLayer()">
-		<h4><i class="icon-delete"></i>Delete "{{ selected?.layer?.name }}"?</h4>
+		<h4><i class="icon-delete"></i>Delete "{{ layer?.name }}"?</h4>
 
 		<div class="bottom-btns">
 			<button type="button" (click)="closeModal()">Cancel</button>
