support logo in relative path

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -345,7 +345,7 @@
     "authorizedPath": "/"
   },
   "menuConfig": {
-    "path": "/assets/logo.svg",
+    "path": "assets/logo.svg",
     "color": "{{ getv "/ansyn/menu/color" "white" }}",
     "background": "{{ getv "/ansyn/menu/background" "red" }}",
     "mode": "{{ getv "/ansyn/menu/mode" "" }}",
