--- a/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.html
+++ b/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.html
@@ -1,7 +1,7 @@
 <div class="context-menu-wrapper"
 	[ngStyle]="contextMenuWrapperStyle">
 
-	<div class="remove-feature-wrapper">
+	<div class="remove-feature-wrapper" *ngIf="interactionType === 'click'">
 		<button class='removeFeature' (mousedown)="removeFeature($event)">x</button>
 	</div>
 
