only buttons work properly

--- a/src/app/@ansyn/menu-items/layers-manager/components/layers-collection/layer-collection.component.html
+++ b/src/app/@ansyn/menu-items/layers-manager/components/layers-collection/layer-collection.component.html
@@ -19,8 +19,7 @@
 
 	<ansyn-layer *ngFor="let layer of collection.data"
 				 [@layersTrigger]="show"
-				 [layer]="layer"
-				 [showOnly]="collection.data.length < 2">
+				 [layer]="layer">
 
 			<ansyn-layer-menu [disabledRemove]="collection.data?.length < 2"
 							  (openModal)="openModal($event, layer)">
