--- a/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.html
+++ b/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.html
@@ -1,6 +1,6 @@
 <div class="overlay-overview" (dblclick)="onDblClick()">
 	<main>
-		<img [src]="overlay?.thumbnailUrl || ''">
+		<img [src]="overlay?.thumbnailUrl || ''" (load)="finishedLoadingImage()" [class.loading]="loading">
 	</main>
 	<footer>
 		<div dir="rtl">{{overlay?.sensorName | translate}}</div>
