--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -6,7 +6,7 @@
       "id": "4df64c1a-330b-1332-c286-7d73754bd001",
       "name": "Default case",
       "lastModified": "2018-04-04T13:21:45.616Z",
-      "autoSave": true,
+      "autoSave": false,
       "state": {
         "timeFilter": "Start - End",
         "orientation": "Align North",
