--- a/src/app/@ansyn/menu-items/layers-manager/components/layers-collection/layer-collection.component.less
+++ b/src/app/@ansyn/menu-items/layers-manager/components/layers-collection/layer-collection.component.less
@@ -10,7 +10,7 @@ div.container {
 
 		div.title-row {
 			button.add-layer {
-				display: block;
+				display: flex;
 			}
 		}
 
@@ -51,7 +51,7 @@ div.container {
 			border-bottom: 2px solid #FFFFFF;
 			border-left: 2px solid #FFFFFF;
 			float: right;
-			margin-right: 10px;
+			margin-right: 17px;
 			margin-top: 4px;
 			cursor: pointer;
 			outline: none;
