--- a/src/app/@ansyn/map-facade/components/imagery-loader/imagery-loader.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-loader/imagery-loader.component.html
@@ -1,5 +1,1 @@
-<div class="loader loader-1">
-	<div class="loader-outter"></div>
-	<div class="loader-inner"></div>
-</div>
-<div class="text" [hidden]="!loaderText">{{loaderText}}<span>.</span><span>.</span><span>.</span></div>
+<ansyn-loader [show]="show" [loaderText]="loaderText"></ansyn-loader>
