Now using <ansyn-loader> for overlay thumbnails

--- a/src/app/@ansyn/core/components/ansyn-loader/ansyn-loader.component.less
+++ b/src/app/@ansyn/core/components/ansyn-loader/ansyn-loader.component.less
@@ -3,7 +3,7 @@
 
 :host {
 	position: absolute;
-	background: rgba(46, 45, 70, 0.3);
+	background: transparent;
 	top: 0;
 	right: 0;
 	width: 100%;
