--- a/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.less
+++ b/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.less
@@ -22,6 +22,7 @@
 		flex-direction: column;
 		justify-content: start;
 		align-items: center;
+		position: relative;
 	}
 
 	.transparent {
@@ -44,18 +45,10 @@
 
 img {
 	height: 150px;
-	box-sizing: border-box;
 
 	&.loading {
-		border: 1px solid transparent;
-		border-radius: 50%;
-		animation: loading-thumbnail 2s linear infinite;
+		visibility: hidden;
 	}
-}
-
-@keyframes loading-thumbnail {
-	0% { transform: rotate(0deg); }
-	100% { transform: rotate(360deg); }
 }
 
 footer {
