1495 bug with hovering overlays (#1649)
* Making a spinning loading animation out of the current image..

* tweak

* Adding <ansyn-loader> component in the core module

* Now basing <ansyn-imagery-loader> on <ansyn-loader>

* Now using <ansyn-loader> for overlay thumbnails

* CR fixes

--- a/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.html
+++ b/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.html
@@ -1,6 +1,7 @@
 <div class="overlay-overview" (dblclick)="onDblClick()">
 	<main>
-		<img [src]="overlay?.thumbnailUrl || ''">
+		<img [src]="overlay?.thumbnailUrl || ''" (load)="finishedLoadingImage()" [class.loading]="loading">
+		<ansyn-loader [show]="loading"></ansyn-loader>
 	</main>
 	<footer>
 		<div dir="rtl">{{overlay?.sensorName | translate}}</div>
