--- a/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.less
+++ b/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.less
@@ -22,6 +22,7 @@
 		flex-direction: column;
 		justify-content: start;
 		align-items: center;
+		position: relative;
 	}
 
 	.transparent {
@@ -44,6 +45,10 @@
 
 img {
 	height: 150px;
+
+	&.loading {
+		visibility: hidden;
+	}
 }
 
 footer {
