--- a/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.html
+++ b/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.html
@@ -1,6 +1,6 @@
 <div class="selected-layer"
 	 *ngIf="(annotationLayerIds$ | async)?.length > 1">
-	<select (change)="setSelectedAnnotationLayer($event.target.value)">
+	<select class="active-annotation-layer" (change)="setSelectedAnnotationLayer($event.target.value)">
 		<option
 			[selected]="(activeAnnotationLayer$ | async) === layer?.id"
 			[value]="layer?.id"
