feat: auto save only on core

--- a/src/app/@ansyn/menu-items/cases/components/cases-table/cases-table.component.less
+++ b/src/app/@ansyn/menu-items/cases/components/cases-table/cases-table.component.less
@@ -137,7 +137,7 @@ div.cases-table {
 				div.cases-table-case-name-col {
 					flex: 1.5
 				}
-				div.cases-table-auto-save-col {
+				.cases-table-auto-save-col {
 					padding-top: 20px;
 					flex: 2;
 				}
