--- a/src/app/@ansyn/menu-items/cases/components/cases-tools/cases-tools.component.html
+++ b/src/app/@ansyn/menu-items/cases/components/cases-tools/cases-tools.component.html
@@ -5,7 +5,7 @@
 	<button class="save-case" type="button" (click)="showSaveCaseModal()">
 		Save As
 	</button>
-	<button class="save-case" type="button" (click)="manualSave()">
+	<button class="save-case" type="button" [disabled]="isDefaultCaseId" (click)="manualSave()">
 		Save
 	</button>
 </div>
