--- a/src/app/@ansyn/menu-items/cases/components/cases-tools/cases-tools.component.less
+++ b/src/app/@ansyn/menu-items/cases/components/cases-tools/cases-tools.component.less
@@ -3,6 +3,10 @@ div.buttons-group {
 	height: 24px;
 	padding: 15px;
 	button {
+		&:disabled {
+			opacity: .5;
+			cursor: default;
+		}
 		cursor: pointer;
 		border: none;
 		font-style: normal;
