Annotation edit new (#1648)
* feat: add remove edit annotations

* server side

* edit save and delete case works

* only buttons work properly

* fixed tests

* css fixes

* refresh layers

* fixed tests

* refactor

* feat: auto save only on core

* fix: core relative imports

* fix unit tests

--- a/src/app/@ansyn/assets/styles/icons.less
+++ b/src/app/@ansyn/assets/styles/icons.less
@@ -288,3 +288,9 @@
 	content: "\e90f";
 	font-size: 4rem;
 }
+.icon-layer-export:before {
+	content: "\e919";
+}
+.icon-layer-add:before {
+	content: "\e91a";
+}
