--- a/src/app/@ansyn/menu-items/cases/components/cases-table/cases-table.component.html
+++ b/src/app/@ansyn/menu-items/cases/components/cases-table/cases-table.component.html
@@ -27,7 +27,7 @@
 			 *ngFor="let id of ids"
 			 (click)="selectCase(id)"
 			 [class.active]="(modalCaseId$ | async) === id"
-			 [class.selected]="(selectedCaseId$ | async) === id"
+			 [class.selected]="selectedCaseId === id"
 			 (mouseenter)="onMouseEnterCaseRow(caseMenu, caseRow, tbodyElement)"
 			 (mouseleave)="onMouseLeaveCaseRow(caseRow)"
 			 [@leaveAnim]
@@ -42,9 +42,16 @@
 					{{entities[id].name}}
 				</div>
 
-				<div class="cases-table-auto-save-col">
-					<ansyn-cases-auto-save [caseId]="id"></ansyn-cases-auto-save>
-				</div>
+				<ansyn-cases-auto-save  class="cases-table-auto-save-col"
+										*ngIf="selectedCaseId === id; else notSelected"
+										[caseId]="id">
+				</ansyn-cases-auto-save>
+
+				<ng-template #notSelected>
+					<div class="cases-table-case-name-col">
+						{{ entities[id].autoSave ? 'ON' : 'OFF' }}
+					</div>
+				</ng-template>
 
 				<div class="cases-table-body-col">
 					{{entities[id].owner}}
