--- a/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.less
+++ b/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.less
@@ -7,7 +7,6 @@
 
 :host {
 	width: 0;
-	height: @tools-box-height;
 	position: absolute;
 	top: -6px;
 	right: 0;
@@ -16,10 +15,35 @@
 	transition-property: width, visibility;
 	transition-duration: 0.1s;
 	z-index: @z-index-annotations-control;
+	.selected-layer{
+		visibility: hidden;
+		display: flex;
+		position: absolute;
+		width: 100%;
+		transform: translateY(-100%);
+		background: #27b2cf;
+		padding: 0 5px;
+		box-sizing: border-box;
 
+		.active-annotation-layer{
+			background: transparent;
+			border: none;
+			color: white;
+			outline: none;
+			border-bottom: 1px solid white;
+			box-shadow: 0 0 1px 0 white;
+			margin-top: 2px;
+
+			option {
+				color: black;
+			}
+		}
+	}
 	&.expand {
+		.selected-layer{
+			visibility: visible;
+		}
 		width: @tools-box-width;
-		height: @tools-box-height;
 		transition-delay: 0.1s;
 		ul.annotations-options {
 			visibility: visible;
